[package]
name = "superinstance-protocol"
version = "0.1.0"
edition = "2021"
description = "Hybrid bottle protocol — JSON envelope + msgpack payload with ternary conservation"
license = "MIT"
authors = ["SuperInstance"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
uuid = { version = "1", features = ["v7", "serde"] }
base64 = "0.22"
thiserror = "2"

[dev-dependencies]
